# korone-bot

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: client.rs  main.rs
